styles.css
/* fonts */
body {
	font-family: 'Poppins', sans-serif;
}
header {
	font-family: 'Mochiy Pop One', sans-serif;
}

/* center align content */
h1,
p,
main {
	margin: auto;
}
main {
	text-align: center;
}

/* grid css */
main {
	display: grid;
	height: 100vh;
	grid-template-rows: 1fr 1fr 1fr auto;
	grid-template-columns: 15px 1fr 15px;
	grid-template-areas:
		'. title   .'
		'. wonton  .'
		'. fortune .'
		'. history .';
	gap: 1em;
}
header {
	grid-area: title;
}
section[wonton] {
	align-self: center;
	grid-area: wonton;
	padding: 2em;
}
fortune-box {
	grid-area: fortune;
}
fortune-history {
	grid-area: history;
}

section[wonton] button {
	background: none;
}
section[wonton] button img {
	content: url('./wonton.png');
	max-width: 517px;
	max-height: 410px;
	width: auto;
	height: auto;
}
section[wonton] button:hover img,
section[wonton] button:active img {
	content: url('./wonton_wink.png');
}

/* Mobile */
@media screen and (max-width: 750px) {
	p,
	body {
		font-size: 5vw;
	}
}

